--- a/style.css
+++ b/style.css
@@ -2,9 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s all;
+    font-family: system-ui;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.8s all;
     -webkit-tap-highlight-color: transparent;
+}
+
+body,html {
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.8s all;
+}
+
+#MAINBODYSTYLEOUT {
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 /* config */
@@ -385,7 +393,7 @@ header {
 .header-lines-text {
     border-left: solid 6px #040404;
     padding-left: 1.5rem;
-    padding-bottom: 4.5rem;
+    padding-bottom: 4.3rem;
     position: absolute;
     transform: translateY(-20px);
 }
