--- a/Font.css
+++ b/Font.css
@@ -33,6 +33,16 @@
     src: url(./Font/SF-Pro-Display-Semibold.otf);
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url(./Font/Roboto-Medium.ttf);
+}
+
+@font-face {
+    font-family: RobotoBold;
+    src: url(./Font/Roboto-Bold.ttf);
+}
+
 /* Thai font */
 
 @font-face {
@@ -57,3 +67,17 @@
     src: url(./Font/Arabica.otf);
 }
 
+@font-face {
+    font-family: Thonburi;
+    src: url(./Font/SFThonburi-Regular.ttf);
+}
+
+@font-face {
+    font-family: ThonburiBOLD;
+    src: url(./Font/SFThonburi-Bold.ttf);
+}
+
+@font-face {
+    font-family: ThonburiSEMIBOLD;
+    src: url(./Font/SFThonburi-Semibold.ttf);
+}
