--- a/overlay.css
+++ b/overlay.css
@@ -44,3 +44,52 @@
     -webkit-text-stroke-width: 1px;
     border-radius: 4px;
 }
+
+.htmlFontSelect {
+    position: fixed;
+    background-color: var(--NavbarColor);
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(20px);
+    opacity: 0;
+    visibility: hidden;
+}
+
+.FontSelecterLinks {
+    width: 300px;
+    margin: 0 auto;
+    padding-top: 1rem;
+}
+
+.FontSelecter {
+    height: 100vh;
+}
+
+.FontSelecterLinks li a {
+    color: var(--SecColor);
+}
+
+.FontSelecterLinks h2 {
+    font-weight: 400;
+    font-family: Segoe ui variable;
+    -webkit-text-stroke-width: 0.8px;
+    color: var(--SecColor);
+    font-size: 22px;
+}
+
+.FontSelecterText {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.FontSelecterText ion-icon {
+    color: var(--SecColor);
+    font-size: 26px;
+}
+
+.FontSelecterLinksHeader {
+    margin-top: 2.4rem;
+}
