--- a/style.css
+++ b/style.css
@@ -513,13 +513,13 @@ header {
 }
 
 .wrapper:before {
-    left: 0;
-    background: linear-gradient(90deg, #0c0c0c, transparent);
+    left: -3px;
+    background: linear-gradient(90deg, var(--color-background), transparent);
 }
 
 .wrapper:after {
-    right: 0;
-    background: linear-gradient(-90deg, #0c0c0c, transparent);
+    right: -3px;
+    background: linear-gradient(-90deg, var(--color-background), transparent);
 }
 
 .items {
