--- a/Variable.css
+++ b/Variable.css
@@ -75,7 +75,7 @@
     --BorderColor: #eee;
     --Icon-color: #000;
     /* Selecter */
-    --Seclecter: #fde5e7;
+    --Seclecter: #eee;
     --SeclecterColor: #000;
 }
 
