--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ html {
     -ms-text-size-adjust: none;
     -moz-text-size-adjust: none;
     text-size-adjust: none;
+    overflow-x: hidden;
 }
 
 #MAINBODYSTYLEOUT {
