--- a/overlay.css
+++ b/overlay.css
@@ -93,3 +93,39 @@
 .FontSelecterLinksHeader {
     margin-top: 2.4rem;
 }
+
+.SimbolBottm {
+    position: fixed;
+    z-index: 2;
+    bottom: 0;
+    background-color: var(--NavbarColor);
+    width: 100%;
+    height: 30px;
+    backdrop-filter: blur(20px);
+}
+
+.SimbolText hr {
+    width: 40%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    border: solid 2px var(--SecColor);
+    border-radius: 5px;
+    animation: ClickOpe 4s infinite cubic-bezier(0.075, 0.82, 0.165, 1);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.SimbolText hr:active {
+    opacity: 60%;
+}
+
+@keyframes ClickOpe {
+    0% {
+    }
+    50% {
+        width: 60%;
+    }
+    100% {
+    }
+}
