--- a/query.css
+++ b/query.css
@@ -6,7 +6,10 @@
     .headernav {
         width: 340px;
         margin: 0 auto;
-        border-radius: 6px 6px 0px 0px;
+        border-radius: 4px 4px 0px 0px;
+    }
+    .header-content {
+        border-radius: 0px 0px 4px 4px;
     }
     header {
         transform: translateY(2rem);
