--- a/style.css
+++ b/style.css
@@ -954,7 +954,7 @@ a:active {
 .Background-Alert {
     position: fixed;
     z-index: 999;
-    background-color: rgb(255, 251, 209);
+    background-color: #040404;
     width: 100%;
     height: 100vh;
 }
@@ -967,11 +967,10 @@ a:active {
 }
 
 .Alert {
-    background-color: #000;
-    width: 400px;
-    height: 300px;
+    width: 420px;
+    height: 340px;
     padding: 1.5rem 2rem;
-    border-radius: 6px;
+    border-radius: 8px;
     position: relative;
 }
 
@@ -988,12 +987,12 @@ a:active {
     font-family: Segoe ui variable;
     font-weight: 300;
     -webkit-text-stroke-width: 1px;
-    width: 320px;
+    width: 330px;
     color: #fff;
 }
 
 .AlertForPhoneFold {
-    font-size: 12px;
+    font-size: 14px;
     color: rgb(255, 251, 209);
     margin-top: 1rem;
 }
@@ -1014,6 +1013,26 @@ a:active {
 .Alert-links ion-icon {
     margin-right: 0.5rem;
     transform: translateY(2px);
+}
+
+.AlertMess {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.AlertMess a {
+    color: #fffbd1;
+    transform: translateY(-10px);
+    font-family: Segoe ui variable;
+    font-weight: 400;
+    -webkit-text-stroke-width: 0.5px;
+    font-size: 16px;
+}
+
+.AlertMess a ion-icon {
+    transform: translateY(2px);
+    margin-right: 0.4rem;
 }
 
 /* REVEAL SCROLL ON ELEMENT */
