--- a/Lang/Thai.css
+++ b/Lang/Thai.css
@@ -72,7 +72,7 @@
 }
 
 .text-sugess p {
-    font-family: thonburi;
+    font-family: LineSeed;
     -webkit-text-stroke-width: 0px;
 }
 
@@ -97,7 +97,7 @@
 }
 
 .callText p {
-    font-family: thonburi;
+    font-family: LineSeed;
     -webkit-text-stroke-width: 0px;
 }
 
@@ -132,7 +132,7 @@
 }
 
 .Alert-text p {
-    font-family: thonburi;
+    font-family: LineSeed;
     -webkit-text-stroke-width: 0px;
 }
 
